job-phone: Correct overlapping JD on bullet points

--- a/src/app/components/home/jobs/jobs.component.scss
+++ b/src/app/components/home/jobs/jobs.component.scss
@@ -116,7 +116,7 @@
 @media (max-width: 768px){
     .jobs {
         .job-description{
-            padding: 0px;
+            padding: 15px;
         }
     }
     ::ng-deep .jobs-tabs{
